# swagger.yaml
@@ -57,31 +57,60 @@ paths:
             tags:
                 - User
             summary: signup page
-            consumes:
-                - application/json
-            produces:
-                - application/json
             requestBody:
-                required: true
                 content:
-                    application/json:
+                    multipart/form-data:
                         schema:
                             type: object
+                            required:
+                                - name
+                                - email
+                                - password
+                                - photo
                             properties:
                                 name:
                                     type: string
                                 email:
                                     type: string
                                 password:
-                                    type: number
+                                    type: string
+                                photo:
+                                    in: formData
+                                    description: The uploaded file data
+                                    type: file
+                                    format: binary
             responses:
                 200:
                     description: All good success
                     content:
                         application/json:
                             schema:
-                                type: string
-                                example: "mystring"
+                                type: object
+                                properties:
+                                    success:
+                                        type: boolean
+                                    token:
+                                        type: string
+                                    user:
+                                        type: object
+                                        properties:
+                                            name:
+                                                type: string
+                                            email:
+                                                type: string
+                                            role:
+                                                type: string
+                                            photo:
+                                                type: object
+                                                properties:
+                                                    id:
+                                                        type: string
+                                                    secure_url:
+                                                        type: string
+                                            _id:
+                                                type: string
+                                            createdAt:
+                                                type: string
                 400:
                     description: Bad Request
                 500:
